--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <article>
             <h3>Hotelli video</h3>
             <video width="320" height="240" controls>
-                <source src="hotel_video.mp4" type="video/mp4">
+                <source src="21120-315137097_small.mp4" type="video/mp4">
                 Teie brauser ei toeta videot.
             </video>
         </article>
@@ -54,7 +54,7 @@
         <article>
             <h3>Muusika hotellis</h3>
             <audio controls>
-                <source src="background_music.mp3" type="audio/mpeg">
+                <source src="Winter-Long-Version(chosic.com).mp3" type="audio/mpeg">
                 Teie brauser ei toeta audiot.
             </audio>
         </article>
